--- a/Lab3/docker/docker-compose.yaml
+++ b/Lab3/docker/docker-compose.yaml
@@ -1,30 +1,31 @@
 version: "3.9"
+name: "road_vision__lab3"
 
 services:
-  mqtt:
-    image: eclipse-mosquitto
-    container_name: mqtt
-    volumes:
-      - ./mosquitto:/mosquitto
-      - ./mosquitto/data:/mosquitto/data
-      - ./mosquitto/log:/mosquitto/log
-    ports:
-      - 1883:1883
-      - 9001:9001
-    networks:
-      mqtt_network:
+#  mqtt:
+#    image: eclipse-mosquitto
+#    container_name: mqtt_lab3
+#    volumes:
+#      - ./mosquitto:/mosquitto
+#      - ./mosquitto/data:/mosquitto/data
+#      - ./mosquitto/log:/mosquitto/log
+#    ports:
+#      - 1883:1883
+#      - 9001:9001
+#    networks:
+#      mqtt_network:
 
 
   postgres_db:
     image: postgres:latest
-    container_name: postgres_db
+    container_name: postgres_db_lab3
     restart: always
     environment:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: pass
       POSTGRES_DB: test_db
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data_lab3:/var/lib/postgresql/data
       - ./db/structure.sql:/docker-entrypoint-initdb.d/structure.sql
     ports:
       - "5432:5432"
@@ -33,14 +34,14 @@ services:
 
 
   pgadmin:
-    container_name: pgadmin4
+    container_name: pgadmin4_lab3
     image: dpage/pgadmin4
     restart: always
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@admin.com
       PGADMIN_DEFAULT_PASSWORD: root
     volumes:
-      - pgadmin-data:/var/lib/pgadmin
+      - pgadmin-data_lab3:/var/lib/pgadmin
     ports:
       - "5050:80"
     networks:
@@ -48,8 +49,8 @@ services:
 
 
   store:
-    container_name: store
-    build: ../../Techn_IoT/Lab2
+    container_name: store_lab3
+    build: ../../Lab2
     depends_on:
       - postgres_db
     restart: always
@@ -79,7 +80,7 @@ services:
     container_name: hub
     build: ../
     depends_on:
-      - mqtt
+#      - mqtt
       - redis
       - store
     environment:
@@ -94,19 +95,19 @@ services:
     ports:
       - "9000:8000"
     networks:
-      mqtt_network:
+#      mqtt_network:
       hub_store:
       hub_redis:
 
 
 networks:
-  mqtt_network:
+#  mqtt_network:
   db_network:
   hub_store:
   hub_redis:
 
 
 volumes:
-  postgres_data:
-  pgadmin-data:
+  postgres_data_lab3:
+  pgadmin-data_lab3:
   
